Thu Jan 24 15:14:52 2002  Nanbor Wang  <nanbor@cs.wustl.edu>

	* ace/Lib_Find.cpp (ldfind): Restored previously removed Win32
	  code and re-organized macros so we wouldn't upset CE builds.

Thu Jan 24 14:53:38 2002  Nanbor Wang  <nanbor@cs.wustl.edu>

	* bin/generate_doxygen.pl:
	* etc/acexml.doxygen: Added the doxygen config file for XML
	  subdirectory.

	* Makefile: Added XML subdirectory into the lists to be compiled
	  and be included in the release.

	* XML/*: Merged in the XML parser code.

Thu Jan 24 10:14:47 2002  Nanbor Wang  <nanbor@cs.wustl.edu>

	* ace/ace_wchar.h: Added the definition for ACE_TEXT_SearchPath.

	* ace/Lib_Find.cpp (ldfind): Fixed UNICODE and Fuzz builds
	  errors.  Thanks to Johnny Willemsen <jwillemsen@remedy.nl> for
	  the fix.

Wed Jan 23 16:48:54 2002  Nanbor Wang  <nanbor@cs.wustl.edu>

	* ace/Lib_Find.h:
	* ace/Lib_Find.cpp (ldfind): Change to use Win32 API SearchPath to
	  search for the target DLL and updated the document for ldfind in
	  header file.  Thanks to Eugene Alterman
	  <Eugene.Alterman@bremer-inc.com> for submitting the patch.

Wed Jan 23 14:01:32 2002  Ossama Othman  <ossama@uci.edu>

	* ace/config-lynxos.h (ACE_LACKS_INET_ATON):

	  LynxOS does not implement the inet_aton() function.

Wed Jan 23 16:37:52 2002  Steve Huston  <shuston@riverace.com>

        * ace/NT_Service.cpp (insert): If the CreateService call fails,
          be sure to save the error value before making another Win32 call
          that will smash it. Thanks to Kelly Hickel <kfh@mqsoftware.com>
          for reporting this.
          Also ACE-ified the source better.

        * examples/NT_Service/main.cpp: Added some ACE_ERROR output if
          operations requested from the command line fail.

Wed Jan 23 16:14:43 2002  Boris Kolpackov  <bosk@ipmce.ru>

	* include/makeinclude/platform_sunos5_sunc++.GNU

	  Added work around for famous Sun CC "pure virtual function called"