@@ -1,3 +1,7 @@
+Thu Jan 24 18:31:49 2002  Steve Huston  <shuston@riverace.com>
+
+        * tests/Process_Manager_Test.cpp: Better diagnostics added.
+
 Thu Jan 24 15:14:52 2002  Nanbor Wang  <nanbor@cs.wustl.edu>
 
 	* ace/Lib_Find.cpp (ldfind): Restored previously removed Win32
